...
        iconCode: 0xe651, // Icons.timeline.codePoint
        iconFontFamily: 'MaterialIcons',
        color: Colors.teal,
        route: '/timeline',
      ),
      const HomeModuleModel(
        title: 'Meditación',
        iconCode: 0xe5d0, // Icons.spa.codePoint
        iconFontFamily: 'MaterialIcons',
        color: Colors.purple,
        route: '/meditation',
      ),
      HomeModuleModel(
...
